--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SEITENTITEL – Daniel S.M. Möhle</title>
+  <title>Über mich – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,31 +19,68 @@
         <li><a href="angebote.html">Angebote</a></li>
         <li><a href="projekte.html">Projekte</a></li>
         <li><a href="medien.html">Medien</a></li>
-        <li><a href="ueber-mich.html">Über mich</a></li>
+        <li><a href="ueber-mich.html" class="active">Über mich</a></li>
       </ul>
     </nav>
   </header>
 
-
   <!-- Hauptinhalt -->
-  <main>
-    <section class="about-intro">
+  <main class="detail-main">
+
+    <!-- Neon-Box: Einleitung -->
+    <section class="neon-box">
       <h2>Über mich</h2>
       <p>
         Mein Name ist <strong>Daniel S.M. Möhle</strong>.  
-        Ich bin Physikstudent, Freiberufler und kreativ in unterschiedlichen Bereichen tätig – 
-        von Wissenschaft und Softwareentwicklung über Musik bis hin zu visueller Gestaltung.  
-        <br><br>
-        Meine Arbeit verbindet <strong>analytisches Denken</strong> mit <strong>kreativem Ausdruck</strong>.  
-        Dabei geht es mir um die Schnittstelle von Wissenschaft, Technik und Kunst – immer mit dem Anspruch, 
-        Inhalte verständlich und zugleich ästhetisch ansprechend darzustellen.  
-        <br><br>
-        Diese Seite soll einen Eindruck meiner Projekte und Angebote geben und zeigen, wie ich Themen aufgreife, 
-        verknüpfe und weiterentwickle.  
+        Ich bin Physikstudent und freiberuflich tätig im Spannungsfeld von Wissenschaft, Analyse und Gestaltung.  
+        Mich interessiert, wie Wissen, Form und Wahrnehmung zusammenwirken –  
+        und wie sich daraus neue Perspektiven auf Realität, Sprache und Denken entwickeln lassen.
+      </p>
+      <p>
+        In meiner Arbeit verbinde ich physikalisches Denken mit klarer Struktur und gestalterischem Bewusstsein.  
+        Ob Datenauswertung, Konzeptentwicklung oder visuelle Umsetzung – das Ziel bleibt dasselbe:  
+        Erkenntnis sichtbar und erfahrbar zu machen.  
+        Für mich liegt die eigentliche Schönheit nicht in der Perfektion,  
+        sondern im Moment, in dem ein Gedanke Form annimmt.
       </p>
     </section>
-  </main>
 
+    <!-- Detailtext -->
+    <section class="detail-content">
+      <h3>Arbeitsweise</h3>
+      <p>
+        Ich arbeite interdisziplinär und systematisch, oft an der Grenze zwischen Naturwissenschaft, Ästhetik und Logik.  
+        Aus Experimenten, Daten und Beobachtungen entstehen Konzepte, Diagramme und Prototypen,  
+        die komplexe Zusammenhänge greifbar machen.  
+        Dabei setze ich auf Klarheit, Nachvollziehbarkeit und einen respektvollen Umgang mit Wissen.
+      </p>
+
+      <h3>Schwerpunkte</h3>
+      <ul>
+        <li>Physik und naturwissenschaftliche Methodik</li>
+        <li>Analytische Modelle, Simulation und Dateninterpretation</li>
+        <li>Gestaltung, Visualisierung und Kommunikation von Erkenntnissen</li>
+      </ul>
+
+      <h3>Haltung</h3>
+      <p>
+        Wissenschaft ist für mich nicht nur eine Disziplin, sondern eine Haltung gegenüber der Welt.  
+        Sie verbindet Beobachtung, Neugier und Verantwortung –  
+        und öffnet Räume, in denen Denken, Fühlen und Gestalten nicht getrennt voneinander stehen müssen.  
+        In dieser Verbindung liegt für mich das Wesen dessen, was wir Erkenntnis nennen:  
+        wenn Denken Bedeutung bekommt und Bedeutung Gestalt.
+      </p>
+
+      <div class="detail-hinweis">
+        <p>
+          <strong>Hinweis:</strong>  
+          Diese Seite dient ausschließlich der persönlichen Vorstellung und Information.  
+          Alle Inhalte, Texte und Abbildungen sind urheberrechtlich geschützt (§ 2 UrhG)  
+          und dürfen nur mit ausdrücklicher Zustimmung verwendet werden.
+        </p>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer>
