--- a/ueber-mich.html
+++ b/ueber-mich.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
   <header>
     <h1 class="logo">
       <img src="logo.png" alt="Daniel S.M. Möhle Logo">
@@ -24,10 +23,9 @@
     </nav>
   </header>
 
-  <!-- Hauptinhalt -->
   <main class="detail-main">
 
-    <!-- Neon-Box: Einleitung -->
+    <!-- Neon-Box -->
     <section class="neon-box">
       <h2>Über mich</h2>
       <p>
@@ -36,8 +34,8 @@
       </p>
       <p>
         In meiner Arbeit verbinde ich physikalisches Denken mit klarer Struktur und gestalterischem Bewusstsein.  
-        Ob Datenauswertung, Konzeptentwicklung oder visuelle Umsetzung – das Ziel bleibt dasselbe:  
-        Erkenntnis sichtbar und erfahrbar zu machen.  
+        Ob Datenauswertung, Konzeptentwicklung oder visuelle Umsetzung –  
+        das Ziel bleibt dasselbe: Erkenntnis sichtbar und erfahrbar zu machen.  
         Für mich liegt die eigentliche Schönheit nicht in der Perfektion,  
         sondern im Moment, in dem ein Gedanke Form annimmt.
       </p>
@@ -45,34 +43,43 @@
 
     <!-- Detailtext -->
     <section class="detail-content">
+      <h3>Profil</h3>
+      <p>
+        Ich bewege mich in einem Feld, in dem wissenschaftliches Arbeiten, analytisches Denken 
+        und visuelle Gestaltung ineinandergreifen.
+        Dabei interessieren mich Strukturen, Zusammenhänge und Methoden,  
+        mit denen sich komplexe Sachverhalte klar und nachvollziehbar abbilden lassen.  
+        Meine Tätigkeit umfasst analytisches Arbeiten ebenso wie konzeptionelles und gestalterisches Denken.
+      </p>
+
       <h3>Arbeitsweise</h3>
       <p>
-        Ich arbeite interdisziplinär und systematisch, oft an der Grenze zwischen Naturwissenschaft, Ästhetik und Logik.  
-        Aus Experimenten, Daten und Beobachtungen entstehen Konzepte, Diagramme und Prototypen,  
-        die komplexe Zusammenhänge greifbar machen.  
-        Dabei setze ich auf Klarheit, Nachvollziehbarkeit und einen respektvollen Umgang mit Wissen.
+        Ausgangspunkt ist meist eine Beobachtung oder Fragestellung,  
+        die sich durch Messung, Modell oder Darstellung untersuchen lässt.  
+        Ich arbeite strukturiert, nachvollziehbar und mit dem Anspruch,  
+        Ergebnisse so aufzubereiten, dass sie sowohl fachlich korrekt  
+        als auch verständlich kommuniziert werden können.
+      </p>
+
+      <h3>Philosophie</h3>
+      <p>
+        Wissenschaft bedeutet für mich, Beobachtung und Denken in Beziehung zu setzen.  
+        Sie schafft Werkzeuge, um Phänomene zu verstehen und Zusammenhänge offenzulegen.  
+        In diesem Sinne ist Erkenntnis immer auch ein Prozess der Darstellung:  
+        das Sichtbarmachen dessen, was vorher verborgen war.
       </p>
 
       <h3>Schwerpunkte</h3>
       <ul>
         <li>Physik und naturwissenschaftliche Methodik</li>
-        <li>Analytische Modelle, Simulation und Dateninterpretation</li>
-        <li>Gestaltung, Visualisierung und Kommunikation von Erkenntnissen</li>
+        <li>Analytische und logische Strukturen</li>
+        <li>Darstellung und Visualisierung von Erkenntnissen</li>
+        <li>Wissenstransfer zwischen Wissenschaft, Gestaltung und Öffentlichkeit</li>
       </ul>
-
-      <h3>Haltung</h3>
-      <p>
-        Wissenschaft ist für mich nicht nur eine Disziplin, sondern eine Haltung gegenüber der Welt.  
-        Sie verbindet Beobachtung, Neugier und Verantwortung –  
-        und öffnet Räume, in denen Denken, Fühlen und Gestalten nicht getrennt voneinander stehen müssen.  
-        In dieser Verbindung liegt für mich das Wesen dessen, was wir Erkenntnis nennen:  
-        wenn Denken Bedeutung bekommt und Bedeutung Gestalt.
-      </p>
 
       <div class="detail-hinweis">
         <p>
-          <strong>Hinweis:</strong>  
-          Diese Seite dient ausschließlich der persönlichen Vorstellung und Information.  
+          <strong>Urheberrecht:</strong>  
           Alle Inhalte, Texte und Abbildungen sind urheberrechtlich geschützt (§ 2 UrhG)  
           und dürfen nur mit ausdrücklicher Zustimmung verwendet werden.
         </p>
@@ -80,7 +87,6 @@
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>
       © 2025 Daniel S.M. Möhle · 
@@ -90,3 +96,4 @@
   </footer>
 </body>
 </html>
+
