--- a/medien.html
+++ b/medien.html
@@ -5,9 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Medien – Daniel S.M. Möhle</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* --- Galerie-Layout --- */
+    .media-gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      max-width: 1100px;
+      margin: 3rem auto 5rem;
+      padding: 0 1rem;
+    }
+
+    .media-item {
+      background: #1a1a1a;
+      border: 1px solid #0ff;
+      border-radius: 14px;
+      box-shadow: 0 0 15px rgba(0,255,255,0.2);
+      overflow: hidden;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .media-item:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 0 25px rgba(0,255,255,0.5);
+    }
+
+    .media-item img {
+      width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .media-caption {
+      padding: 1rem;
+      text-align: center;
+      font-size: 0.95rem;
+      color: #ccc;
+    }
+
+    @media (max-width: 600px) {
+      .media-caption { font-size: 0.85rem; }
+    }
+  </style>
 </head>
 <body>
-  <!-- Header -->
   <header>
     <h1 class="logo">
       <img src="logo.png" alt="Daniel S.M. Möhle Logo">
@@ -24,9 +65,7 @@
     </nav>
   </header>
 
-  <!-- Hauptinhalt -->
   <main class="detail-main">
-
     <!-- Neon-Box -->
     <section class="neon-box">
       <h2>Medien</h2>
@@ -37,24 +76,36 @@
       </p>
     </section>
 
-    <!-- Hauptinhalt wie gehabt -->
+    <!-- Galerie -->
+    <section class="media-gallery">
+      <div class="media-item">
+        <img src="P1.jpg" alt="Aurora am Nachthimmel">
+        <div class="media-caption">Aurora – Fotografiert über Nordhessen</div>
+      </div>
+      <div class="media-item">
+        <img src="P2.png" alt="Experimentelles Spektrum">
+        <div class="media-caption">Spektrale Überlagerung – Licht & Beugung</div>
+      </div>
+      <div class="media-item">
+        <img src="P3.jpg" alt="Mondfotografie">
+        <div class="media-caption">Lunare Oberfläche – Beobachtung durch Teleoptik</div>
+      </div>
+      <div class="media-item">
+        <img src="G1.png" alt="Abstrakte Grafik mit Neonfarben">
+        <div class="media-caption">Neonform I – digitale Strukturkomposition</div>
+      </div>
+      <div class="media-item">
+        <img src="G2.png" alt="Abstrakte Grafik, violett-blau">
+        <div class="media-caption">Neonform II – Farbimpuls auf Textur</div>
+      </div>
+      <div class="media-item">
+        <img src="G3.png" alt="Mathematische Visualisierung">
+        <div class="media-caption">Geometrisches Feld – Linien und Symmetrie</div>
+      </div>
+    </section>
+
+    <!-- Beschreibung & Hinweis -->
     <section class="detail-content">
-      <h3>Inhalte & Themen</h3>
-      <ul>
-        <li><strong>Fotografie:</strong> Wissenschaftlich-dokumentarische Serien, experimentelle Makroaufnahmen, urbane Motive</li>
-        <li><strong>Design & Visuals:</strong> Grafiken, Animationen, visuelle Experimente, künstlerische Kompositionen</li>
-        <li><strong>Audio & Musik:</strong> Eigene Kompositionen, Klangexperimente, Sounddesign-Projekte</li>
-        <li><strong>Digital Art:</strong> KI-generierte Bildkonzepte, algorithmische Muster und visuelle Simulationen</li>
-      </ul>
-
-      <h3>Medienformat</h3>
-      <ul>
-        <li>Bilder in hoher Auflösung (JPG, PNG, RAW)</li>
-        <li>Video & Animation (MP4, ProRes, GIF)</li>
-        <li>Audio (WAV, MP3, FLAC)</li>
-        <li>Texte & Begleitkommentare zur Entstehung</li>
-      </ul>
-
       <h3>Ziel</h3>
       <p>
         Die Medienauswahl zeigt die Verbindung von analytischem Denken und kreativer Gestaltung.  
@@ -62,14 +113,16 @@
       </p>
 
       <div class="detail-hinweis">
-        <p><strong>Hinweis:</strong> Die hier dargestellten Inhalte dienen ausschließlich zur Veranschaulichung.  
-        Sie sind keine Angebote im rechtlichen Sinne, sondern persönliche künstlerische Arbeiten im Rahmen meiner freiberuflichen Tätigkeit.  
-        Alle Medien sind urheberrechtlich geschützt (§ 2 UrhG).</p>
+        <p>
+          <strong>Hinweis:</strong>  
+          Die hier dargestellten Inhalte dienen ausschließlich zur Veranschaulichung  
+          und sind persönliche künstlerische Arbeiten im Rahmen meiner freiberuflichen Tätigkeit.  
+          Alle Medien sind urheberrechtlich geschützt (§ 2 UrhG).
+        </p>
       </div>
     </section>
   </main>
 
-  <!-- Footer -->
   <footer>
     <p>
       © 2025 Daniel S.M. Möhle · 
@@ -79,3 +132,4 @@
   </footer>
 </body>
 </html>
+
