--- a/science-beratung.html
+++ b/science-beratung.html
@@ -30,7 +30,7 @@
       <h2>Wissenschaftliche Beratung</h2>
       <p>
         Methodische Klarheit, präzise Messungen und nachvollziehbare Auswertung –
-        aus der Praxis der Physik und Chemie.
+        aus der Praxis der Physik.
       </p>
       <p><a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a></p>
     </section>
