--- a/medien.html
+++ b/medien.html
@@ -80,27 +80,27 @@
     <section class="media-gallery">
       <div class="media-item">
         <img src="P1.jpg" alt="Aurora am Nachthimmel">
-        <div class="media-caption">Aurora – Fotografiert über Nordhessen</div>
+        <div class="media-caption">Polarlicht über Nordhessen – Aufnahme des geomagnetischen Sturms vom Mai 2024</div>
       </div>
       <div class="media-item">
         <img src="P2.png" alt="Experimentelles Spektrum">
-        <div class="media-caption">Spektrale Überlagerung – Licht & Beugung</div>
+        <div class="media-caption">Spektrale Beugung – Lichtzerlegung durch Gitterinterferenz</div>
       </div>
       <div class="media-item">
         <img src="P3.jpg" alt="Mondfotografie">
-        <div class="media-caption">Lunare Oberfläche – Beobachtung durch Teleoptik</div>
+        <div class="media-caption">Mondbeobachtung – Libration und Kraterstruktur bei zunehmender Phase</div>
       </div>
       <div class="media-item">
         <img src="G3.png" alt="Mathematische Visualisierung">
-        <div class="media-caption">Geometrisches Feld – Linien und Symmetrie</div>
+        <div class="media-caption">Clausius-Clapeyron-Beziehung – Temperatur-Druck-Gradient bei Phasenübergängen</div>
       </div>
       <div class="media-item">
         <img src="G1.png" alt="Abstrakte Grafik mit Neonfarben">
-        <div class="media-caption">Neonform I – digitale Strukturkomposition</div>
+        <div class="media-caption">Neonform I – Digitale Komposition mit additiver Farbmischung (Magenta / Cyan)</div>
       </div>
       <div class="media-item">
         <img src="G2.png" alt="Abstrakte Grafik, violett-blau">
-        <div class="media-caption">Neonform II – Farbimpuls auf Textur</div>
+        <div class="media-caption">Neonform II – Strukturkomposition aus Rissmustern und Farbverläufen</div>
       </div>
     </section>
 
