--- a/science-beratung.html
+++ b/science-beratung.html
@@ -29,8 +29,8 @@
     <section class="detail-intro">
       <h2>Wissenschaftliche Beratung</h2>
       <p>
-        Methodische Klarheit, präzise Messungen und nachvollziehbare Auswertung –
-        aus der Praxis der Physik.
+        Präzise Analysen, fundierte Methoden und ein klarer Blick für Details – 
+        aus der Praxis der Physik und angrenzender Naturwissenschaften.
       </p>
       <p><a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a></p>
     </section>
@@ -38,49 +38,39 @@
     <section class="detail-content">
       <h3>Leistungen</h3>
       <ul>
-        <li>Versuchsplanung & Aufbau (Physik, Chemie, Atom- & Kernphysik)</li>
-        <li>Durchführung & Messdatenerfassung, Laborprotokolle</li>
-        <li>Quantitative Auswertung, Fehlerrechnung, Unsicherheitsanalyse</li>
-        <li>Vergleich mit Literaturwerten, Plausibilisierung, Bericht/Publikation</li>
+        <li>Planung, Durchführung und Auswertung naturwissenschaftlicher Experimente</li>
+        <li>Messdatenerfassung und Fehleranalyse für Labor, Studium oder Forschung</li>
+        <li>Bewertung von Messergebnissen und Vergleich mit Literaturwerten</li>
+        <li>Beratung bei Konzeption und Dokumentation wissenschaftlicher Arbeiten</li>
       </ul>
 
-      <h3>Methodische Expertise</h3>
+      <h3>Fachliche Schwerpunkte</h3>
       <ul>
-        <li><strong>Mechanik & Thermodynamik:</strong> Schwingungen, Viskosität, Kalorimetrie, Gasthermometer</li>
-        <li><strong>Optik:</strong> Linsen, Beugung, Auflösungsvermögen, Dispersion, Mikroskopie</li>
-        <li><strong>Elektrizität & Magnetismus:</strong> Spannungsteiler, Brücken, Magnetfeldmessung, Hysterese</li>
-        <li><strong>Chemie:</strong> Titrationen, Löslichkeits- & Gleichgewichtsversuche, Gasgesetze, Molmassen</li>
-        <li><strong>Atom- & Quantenphysik:</strong> Franck-Hertz, Spektroskopie, Energieniveaus</li>
-        <li><strong>Kernphysik:</strong> Zerfallsgesetze, Strahlungsabsorption, Statistik, Regression</li>
+        <li><strong>Physik & Technik:</strong> Mechanik, Wärmelehre, Elektrizität, Magnetismus, Optik</li>
+        <li><strong>Chemie & Materialanalyse:</strong> Stoffeigenschaften, Reaktionsverhalten, Konzentrationsbestimmung</li>
+        <li><strong>Moderne Messverfahren:</strong> Spektroskopie, Strahlungsanalyse, Sensorik</li>
+        <li><strong>Datenauswertung:</strong> Unsicherheitsanalyse, Trendermittlung, Regressionsmodelle</li>
       </ul>
 
-      <h3>Statistische Methoden</h3>
-      <ul>
-        <li>Fehlerfortpflanzung (partielle Ableitungen)</li>
-        <li>Poisson- und Gauß-Statistik, χ²-Tests</li>
-        <li>Lineare & nichtlineare Regressionen</li>
-        <li>Konfidenzintervalle, Unsicherheitsanalyse</li>
-      </ul>
-
-      <h3>Use-Cases</h3>
-      <ul>
-        <li>Validierung von Messaufbauten & Sensorketten</li>
-        <li>Material- und Bauteilprüfung (thermisch, mechanisch, magnetisch)</li>
-        <li>Analyse von Strahlungs- & Spektroskopiedaten</li>
-        <li>Didaktische Aufbereitung für Schulung & Lehre</li>
-      </ul>
-
-      <h3>Zusammenarbeit</h3>
+      <h3>Arbeitsweise</h3>
       <ol>
-        <li>Kurzbriefing & Zieldefinition</li>
-        <li>Mess-/Auswerteplan, Datenmodell & Deliverables</li>
-        <li>Durchführung & Zwischenbericht</li>
-        <li>Endreport inkl. Daten/Code</li>
+        <li>Vorgespräch und Zieldefinition</li>
+        <li>Konzeption des Mess- oder Analyseverfahrens</li>
+        <li>Datenerhebung und Dokumentation</li>
+        <li>Auswertung und verständlicher Ergebnisbericht</li>
       </ol>
+
+      <h3>Beispiele aus der Praxis</h3>
+      <ul>
+        <li>Überprüfung von Messaufbauten und Sensorketten</li>
+        <li>Analyse von Material- und Temperaturverhalten</li>
+        <li>Auswertung von Spektren und Strahlungsdaten</li>
+        <li>Didaktische Aufbereitung für Lehre und Schulung</li>
+      </ul>
 
       <h3>Kontakt</h3>
       <p>
-        Abrechnung transparent nach Aufwand oder als Paket – je nach Projektumfang.<br>
+        Die Abrechnung erfolgt transparent nach Aufwand oder als Projektpaket.<br>
         <a href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a>
       </p>
     </section>
@@ -101,3 +91,4 @@
   </footer>
 </body>
 </html>
+
