--- a/science-beratung.html
+++ b/science-beratung.html
@@ -47,7 +47,7 @@
       <h3>Fachliche Schwerpunkte</h3>
       <ul>
         <li><strong>Physik & Technik:</strong> Mechanik, Wärmelehre, Elektrizität, Magnetismus, Optik</li>
-        <li><strong>Chemie & Materialanalyse:</strong> Stoffeigenschaften, Reaktionsverhalten, Konzentrationsbestimmung</li>
+        <li><strong>Materialanalyse:</strong> Stoffeigenschaften, Reaktionsverhalten, Konzentrationsbestimmung</li>
         <li><strong>Moderne Messverfahren:</strong> Spektroskopie, Strahlungsanalyse, Sensorik</li>
         <li><strong>Datenauswertung:</strong> Unsicherheitsanalyse, Trendermittlung, Regressionsmodelle</li>
       </ul>
