--- a/software-coding.html
+++ b/software-coding.html
@@ -28,58 +28,65 @@
   <main class="detail-main">
     <section class="detail-intro">
       <h2>Wissenschaftliche Software & Coding</h2>
-      <p>Von der ersten Messreihe bis zum reproduzierbaren Python-Workflow:  
-      präzise Datenanalyse, nachvollziehbare Modelle und funktionale Tools für Wissenschaft, Labor und Studium.</p>
+      <p>
+        Maßgeschneiderte Python-Lösungen für Forschung, Studium und Praxis – 
+        von der Datenerfassung über die Analyse bis zur klaren grafischen Darstellung.
+      </p>
       <a href="angebote.html" class="back-link">← Zurück zu den Angeboten</a>
     </section>
 
     <section class="detail-content">
-      <h3>Schwerpunkte</h3>
+      <h3>Leistungsprofil</h3>
       <ul>
-        <li>Datenanalyse & Visualisierung (Pandas, NumPy, Matplotlib)</li>
-        <li>Model- & Curve-Fitting (SciPy): lineare und nichtlineare Regression</li>
-        <li>Fehlerrechnung & Unsicherheitsanalysen, χ²-Tests</li>
-        <li>Fourier- & Spektralanalysen (z. B. Schwingungen, Audio, Franck-Hertz-Daten)</li>
-        <li>Automatisierung von Messabläufen & Batch-Processing</li>
-        <li>Sensor-Anbindung (seriell, Bluetooth, Laborgeräte)</li>
-        <li>Reproduzierbare Reports (Jupyter, LaTeX), CLI-Tools, Dashboards</li>
+        <li>Programmierung von Tools für Datenanalyse, Simulation und Visualisierung</li>
+        <li>Automatisierung von Messabläufen und Auswertungen</li>
+        <li>Entwicklung reproduzierbarer Workflows mit sauberer Dokumentation</li>
+        <li>Integration von Sensoren, Datenschnittstellen und grafischen Ausgaben</li>
       </ul>
 
-      <h3>Anwendungsfelder</h3>
+      <h3>Typische Anwendungen</h3>
       <ul>
-        <li><strong>Mechanik:</strong> Kreisel-Datenanalyse, Elastizitätsmodul, Schwingungen</li>
-        <li><strong>Optik:</strong> Brennweiten, Gitterbeugung, Mikroskop-Pixelanalyse</li>
-        <li><strong>Akustik:</strong> Resonanzkurven, FFT-Analysen, Schallgeschwindigkeit</li>
-        <li><strong>Chemie:</strong> Titrationskurven, Leitfähigkeit, Endpunkt-Erkennung</li>
-        <li><strong>Atomphysik:</strong> Franck-Hertz, Spektren-Fits, Energieniveaus</li>
-        <li><strong>Kernphysik:</strong> Zerfallsgesetze, Halbwertszeiten, Absorption</li>
-        <li><strong>Bilddaten:</strong> Rasterkraft-Analogon, Phasenbilder, Oberflächenabbildung</li>
+        <li>Auswertung experimenteller Daten (z. B. Schwingungen, Temperatur, Spannung, Spektren)</li>
+        <li>Analyse chemischer oder physikalischer Versuchsreihen</li>
+        <li>Signal- und Frequenzanalysen im Audio- oder Laborbereich</li>
+        <li>Statistische Modellierung und Unsicherheitsanalyse</li>
+        <li>Erstellung interaktiver Dashboards oder Jupyter-Notebooks</li>
       </ul>
 
-      <h3>Workflow & Qualität</h3>
+      <h3>Arbeitsweise</h3>
       <ol>
-        <li>Datenschema & Zielgrößen definieren</li>
-        <li>Auswerteroutinen mit Plausibilitätsprüfung & Tests</li>
-        <li>Visualisierung & Report-Export</li>
-        <li>Übergabe inkl. Dokumentation & Parametrierung</li>
+        <li>Definition der Zielgrößen und Datengrundlage</li>
+        <li>Entwicklung der Analyse- oder Automatisierungsroutinen</li>
+        <li>Visualisierung und Export der Ergebnisse</li>
+        <li>Übergabe mit Anleitung und Beispielprojekten</li>
       </ol>
 
-      <h3>Deliverables</h3>
+      <h3>Ergebnisse & Formate</h3>
       <ul>
-        <li>Jupyter-Notebook / Python-Paket / CLI-Tool</li>
-        <li>Plots (SVG / PNG / PDF) & Tabellen (CSV / XLSX)</li>
-        <li>Repro-Reports (LaTeX oder Markdown)</li>
-        <li>Kurzanleitung & Beispiel-Workflows</li>
+        <li>Python-Skripte, Jupyter-Notebooks oder kleine Desktop-Tools</li>
+        <li>Diagramme und Tabellen in gängigen Formaten (PNG, CSV, PDF)</li>
+        <li>Kompakte Dokumentation und Beispiel-Workflows</li>
       </ul>
 
+      <h3>Vorteil für Auftraggeber</h3>
+      <p>
+        Ich entwickle saubere, nachvollziehbare Software, die den wissenschaftlichen Anspruch wahrt 
+        und sich zugleich leicht in bestehende Arbeitsprozesse integrieren lässt.  
+        Ideal für Labore, Hochschulen, Forschungsprojekte oder technisch interessierte Privatkunden.
+      </p>
+
       <h3>Kontakt</h3>
-      <p>Individuelle Softwarelösungen entstehen im direkten Austausch – von der Idee bis zur Analyse.  
-      Ich entwickle klar dokumentierte, erweiterbare Tools für Forschung, Studium und Praxis.</p>
-      <p><a class="back-link" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a></p>
+      <p>
+        Für individuelle Lösungen oder Kooperationen stehe ich gerne zur Verfügung.<br>
+        <a class="back-link" href="mailto:daniel.moe991@proton.me">Anfragen per E-Mail</a>
+      </p>
 
       <div class="detail-hinweis">
-        <p><strong>Hinweis:</strong> Dieses Angebot umfasst ausschließlich wissenschaftliche Entwicklungs- und Analysetätigkeiten.  
-        Eine Umsetzung erfolgt im freiberuflichen Rahmen, ohne kommerzielle Produktentwicklung.</p>
+        <p>
+          <strong>Hinweis:</strong> Diese Leistung umfasst ausschließlich wissenschaftliche Entwicklungs- 
+          und Analysetätigkeiten im freiberuflichen Rahmen. 
+          Eine kommerzielle Produktentwicklung ist nicht Gegenstand des Angebots.
+        </p>
       </div>
     </section>
   </main>
@@ -94,4 +101,3 @@
   </footer>
 </body>
 </html>
-
