--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
       <p>
         Sie finden hier einen Überblick über meine 
         <a href="angebote.html" class="back-link">Angebote</a>,  
-        laufende <a href="projekte.html" class="back-link">Projekte</a>  
-        sowie ausgewählte <a href="medien.html" class="back-link">visuelle Arbeiten</a>.
+        laufende <a href="projekte.html" class="back-link">Projekte</a>,  
+        ausgewählte <a href="medien.html" class="back-link">visuelle Arbeiten</a> 
+        sowie etwas <a href="ueber-mich.html" class="back-link">Über mich</a>.
       </p>
     </section>
 
     <section class="detail-content">
       <h3>Einordnung</h3>
       <p>
-        Die Seite richtet sich an Institutionen, Unternehmen und Interessierte,  
+        Die Seite richtet sich an Interessierte,Institutionen und Unternehmen,  
         die interdisziplinäre wissenschaftliche Perspektiven, klare Analysen  
         und ästhetisch durchdachte Umsetzungen schätzen.
       </p>
