--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Sie finden hier einen Überblick über meine 
         <a href="angebote.html" class="back-link">Angebote</a>,  
         laufende <a href="projekte.html" class="back-link">Projekte</a>,  
-        ausgewählte <a href="medien.html" class="back-link">visuelle Arbeiten</a> 
+        ausgewählte <a href="medien.html" class="back-link">visuelle Arbeiten</a>,
         sowie etwas <a href="ueber-mich.html" class="back-link">Über mich</a>.
       </p>
     </section>
