--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="angebote.html" class="back-link">Angebote</a>,  
         laufende <a href="projekte.html" class="back-link">Projekte</a>,  
         ausgewählte <a href="medien.html" class="back-link">visuelle Arbeiten</a>,
-        sowie etwas <a href="ueber-mich.html" class="back-link">Über mich</a>.
+        sowie etwas <a href="ueber-mich.html" class="back-link">über mich</a>.
       </p>
     </section>
 
